.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Multi_feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>haystack field</description>
        <label>Multi-feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NGSS_Dealer_ID__c</fullName>
        <description>Auto-number field that generates on account creation.</description>
        <displayFormat>{0000000}</displayFormat>
        <label>NGSS Dealer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NGSS_Flair__c</fullName>
        <description>Formula used to display BU flair at the top of the account page layout for each BU as Active, Former, or Prospect.</description>
        <formula>IF ( ISPICKVAL (SVOC_Status__c, &quot;OUT OF BUSINESS&quot;), IMAGE(&quot;/resource/Flair_Logos/OOB_Account.png&quot;, &quot;Out Of Business&quot;) , 
ATC_Flair__c &amp; &quot; &quot; &amp; HomeNet_Flair__c &amp; &quot; &quot; &amp; KBB_Flair__c &amp; &quot; &quot; &amp; vAuto_Flair__c &amp; &quot; &quot; &amp; Vin_Flair__c &amp; &quot; &quot; &amp; TIM_Flair__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATG Company Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neglected_Value__c</fullName>
        <description>Formula used to determine if the account is neglected. IF  (Last_Activity_Age__c  &gt;= 21, 1, 0)</description>
        <formula>IF  (Last_Activity_Age__c  &gt;= 21, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neglected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Car_Sales_Volume__c</fullName>
        <description>Manual field that represents the dealer&apos;s volume of new car sales.</description>
        <label>New Car Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_Used_Ratio__c</fullName>
        <defaultValue>&quot;50/50&quot;</defaultValue>
        <description>haystack field</description>
        <label>New to Used Ratio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_SE_Date__c</fullName>
        <description>Formula field that looks at the PM Last Solid Engagement Date and adds 21 days to that to create the due date for the new solid engagement task.</description>
        <formula>IF(  ISBLANK(PM_Last_Activity_Date__c), Today(), PM_Last_Activity_Date__c +30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that looks at the PM Last Solid Engagement Date and adds 21 days to that to create the due date for the new solid engagement task.</inlineHelpText>
        <label>Next SE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOB_Flair__c</fullName>
        <description>Formula used to display flair image for accounts that are out of business.</description>
        <formula>IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.FileDownload?file=015E0000001GXJo&quot;, &quot;OOB&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OOB Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTL_Contract_End_Date__c</fullName>
        <description>The dealer&apos;s On the Lot contract end date.</description>
        <label>OTL Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Haystak_Account_name__c</fullName>
        <label>Old Haystak Account name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnTheLot__c</fullName>
        <description>Picklist to select the dealer&apos;s on the lot services, if any.</description>
        <label>On the Lot</label>
        <picklist>
            <picklistValues>
                <fullName>1dealernetwork.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>atlantic dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>autobahn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBlitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Exac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revelutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Stix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader (Hosted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink OTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry Auto Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome a Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data One DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Opportuntities__c</fullName>
        <label>Open Opportuntities</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>ATC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Closed Realized</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Account Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PM_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked manually after PM is added to the Account Team. Workflow then fires an email alert to the PM letting them know they have a new account.</description>
        <inlineHelpText>Check this box after adding a PM to an account to trigger an email alert to them letting them know that they have a new account.</inlineHelpText>
        <label>PM Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Last_Activity_Date__c</fullName>
        <description>Manually updated field used to log date of last solid engagement with the customer.</description>
        <label>Last Solid Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PS_Last_Activity_Date__c</fullName>
        <description>Manually updated field used to log date of Product Specialist&apos;s last contact with the customer.</description>
        <label>PS Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Polk_Id__c</fullName>
        <description>The dealer&apos;s Polk account ID.</description>
        <label>Polk Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Pilot_Penetration__c</fullName>
        <label>Pre Pilot Penetration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Pilot_Potential__c</fullName>
        <label>Pre Pilot Potential</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingTool__c</fullName>
        <description>Picklist to select the dealer&apos;s Pricing Tool, if any.</description>
        <label>Pricing Tool</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarList</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pure Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinsolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_SVOC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the primary svoc account this secondary is related to</inlineHelpText>
        <label>Primary SVOC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Secondary Customer</relationshipLabel>
        <relationshipName>Primary_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_CRM__c</fullName>
        <description>Field is updated by workflow when the CRM field is changed.</description>
        <inlineHelpText>Field is updated by workflow when the CRM field is changed.</inlineHelpText>
        <label>Prior CRM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_ILM__c</fullName>
        <description>Field is updated by workflow when the ILM field is changed.</description>
        <inlineHelpText>Field is updated by workflow when the ILM field is changed.</inlineHelpText>
        <label>Prior ILM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Record_Type__c</fullName>
        <description>SVOC-updated by workflow and used to task an admin if the SVOC integration updates an account record from unverified prospect to secondary or primary to secondary so tertiary data can be moved</description>
        <inlineHelpText>updated by workflow and used to task an admin if the SVOC integration updates an account record from unverified prospect to secondary or primary to secondary so tertiary data can be moved</inlineHelpText>
        <label>Prior Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Solid_Engagement__c</fullName>
        <description>Updated by workflow when Last Solid Engagement is updated.</description>
        <label>Prior Solid Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used to determine which region the account is listed in.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager__c</fullName>
        <description>Haystak</description>
        <formula>IF( ISPICKVAL( Region__c , &quot;Mid-States&quot;) , &quot;Chris Farnham&quot;,  
IF(ISPICKVAL( Region__c , &quot;California&quot;), &quot;Adam Fairchild&quot;,  
IF(ISPICKVAL( Region__c , &quot;Midwest&quot;), &quot;Joshua Tax&quot;, 
IF(ISPICKVAL(Region__c, &quot;Mountain West&quot;), &quot;Ron Eilers&quot;, 
IF(ISPICKVAL(Region__c, &quot;Southwest&quot;), &quot;Troy Watson&quot;, 
IF(ISPICKVAL(Region__c, &quot;Great Lakes&quot;), &quot;Ryan Wiley&quot;, 
IF(ISPICKVAL(Region__c, &quot;Southeast&quot;), &quot;Damon Farnham&quot;, 
IF(ISPICKVAL(Region__c, &quot;Northeast&quot;), &quot;Matt Clark&quot;, 
IF(ISPICKVAL(Region__c, &quot;New England&quot;), &quot;Annemarie Wheeler&quot;,  &quot;&quot;)
)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Info__c</fullName>
        <description>SVOC-graphic that identifies the account as a secondary if the record type = secondary</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000002kqV0&quot;, &quot;Secondary&quot;)</formula>
        <label>Relationship Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote__c</fullName>
        <label>Remote</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Merge_Action__c</fullName>
        <formula>HYPERLINK( 
&quot;/merge/accmergewizard.jsp?srch=&quot; &amp; Name &amp; 
&quot;&amp;retURL=%2F&quot; &amp; Id &amp; 
&quot;&amp;cancelURL=%2F&quot; &amp; Id, &quot;Merge Accounts&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEM_Last_Account_Engagement__c</fullName>
        <description>haystack field</description>
        <label>SEM Last Account Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEM_Last_Account_Review__c</fullName>
        <description>haystak</description>
        <label>SEM Last Account Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEM_Next_Account_Engagement__c</fullName>
        <description>haystack field</description>
        <label>SEM Next Account Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEM_Provider__c</fullName>
        <label>SEM Provider</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShowRoom Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsertive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com Dominator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moore&amp;Scarry - HayStack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaxAd FirstLook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEM_Spend__c</fullName>
        <label>SEM Spend</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEO_Last_Account_Engagement__c</fullName>
        <description>haystack field</description>
        <label>SEO Last Account Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_SEM__c</fullName>
        <description>Haystak field.</description>
        <label>SEO SEM</label>
        <picklist>
            <picklistValues>
                <fullName>SEM Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO and SEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SE_Status__c</fullName>
        <description>Haystak</description>
        <formula>IF(Total_Software_Spend__c &gt; 0 &amp;&amp; OR(PM_Last_Activity_Date__c  &lt;= Today()-30, ISBLANK(PM_Last_Activity_Date__c) ) , 
&quot;Needs Attention&quot;, 
&quot;Goal Completed&quot;)</formula>
        <inlineHelpText>formula field that looks at the Last SE date and determines whether it is on schedule, past due</inlineHelpText>
        <label>SE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Division__c</fullName>
        <formula>IF(ISBLANK(SVOC_Region__c), &quot;None&quot;,
IF(CONTAINS(&quot;20:21:33:34:Great Lakes&quot;, SVOC_Region__c), &quot;Great Lakes&quot;,
IF(CONTAINS(&quot;22:23:24:25:26:Central&quot;,SVOC_Region__c ), &quot;Central&quot;,
IF(CONTAINS(&quot;15:16:17:18:19:Northeast&quot;,SVOC_Region__c ), &quot;NorthEast&quot;,
IF(CONTAINS(&quot;10:11:12:13:14:Southeast&quot;, SVOC_Region__c), &quot;SouthEast&quot;,
IF(CONTAINS(&quot;35:43:44&quot;,SVOC_Region__c),&quot;Major Accounts&quot;,
IF(CONTAINS(&quot;39&quot;,SVOC_Region__c),&quot;DSC&quot;,
IF(CONTAINS(&quot;27:28:29:30:32:West&quot;,SVOC_Region__c), &quot;West&quot;, &quot;Other&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_District__c</fullName>
        <description>SVOC - updated by the integration</description>
        <inlineHelpText>updated by the integration w/SVOC</inlineHelpText>
        <label>SVOC District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Id__c</fullName>
        <externalId>true</externalId>
        <label>SVOC Master_Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVOC_Parent_Id__c</fullName>
        <formula>Parent.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC Parent_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Region__c</fullName>
        <description>SVOC the ATC region the customer is located in, updated by SVOC</description>
        <inlineHelpText>updated by the integration w/SVOC</inlineHelpText>
        <label>SVOC Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Relationship__c</fullName>
        <description>SVOC formula field setup for admins only - to trigger worklfow related to the svoc integration</description>
        <formula>CASE(  RecordType.Id  ,
 &quot;012M00000008uG1&quot;, &quot;Unverified Prospect&quot;, 
&quot;012M00000008uGV&quot;, &quot;Secondary Customer&quot;,
&quot;012E000000052TQ&quot;, &quot;Primary&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field setup for admins only - to trigger worklfow related to the svoc integration</inlineHelpText>
        <label>SVOC Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Status__c</fullName>
        <description>Haystak</description>
        <label>SVOC Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT OF BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for SVOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to SVOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVOC_Sub_Type__c</fullName>
        <description>SVOC governed field, linked to the standard Type field to create a dependent picklist for user to choose from</description>
        <inlineHelpText>updated by SVOC</inlineHelpText>
        <label>Customer Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - STATE, LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASING COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESELLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle History Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVOC_Update__c</fullName>
        <label>SVOC Update</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>In business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Affiliation_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Affiliation_Date__c</fullName>
        <label>Affiliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Bad_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Co_Op__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Op</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Discount_Percentage__c</fullName>
        <label>Discount_Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Drive_Time__c</fullName>
        <label>Drive_Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Is_Modified__c</fullName>
        <formula>IF(Parent.Name != SalesIQ__Propose_parent__r.Name, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__LotSizeRequestPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LotSizeRequestPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Propose_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Propose_parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Propose_parent)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__SVOCReqLotsizePending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SVOCReqLotsizePending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__SVOCRequestPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SVOCRequestPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Total_Billable__c</fullName>
        <label>Total Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Total_Opportunity__c</fullName>
        <label>Total Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Updated_Lot_Size_New__c</fullName>
        <label>Updated Lot Size (New Cars)</label>
        <picklist>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>